<resources>
    <!--Login Screen-->
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="no_account_prompt"><u>Don\'t have an account?</u></string>
    <string name="remember_me_text">Remember me</string>
    <string name="login_processing_text">Processing credentials…</string>
    <string name="loading_text">Loading…</string>
    <string name="invalid_username_error">That username doesn\'t exist</string>
    <string name="invalid_password_error">That password is invalid</string>
    <string name="username_in_use_error">That username is already taken</string>

    <!--Account Creation-->
    <string name="confirm_password_prompt">Confirm password</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="format_invalid_error">Usernames and passwords must be 5–15 characters long, and can\'t contain spaces or commas</string>
    <string name="account_creation_processing_text">Processing request…</string>
    <string name="confirm_not_equal_to_password">Those passwords don\'t match</string>

    <!--Main Screen-->
    <string name="app_name">Chess!</string>
    <string name="title">Online Chess</string>
    <string name="author">By: Lukas Willsie</string>
    <string name="create_game_button">Create Game</string>
    <string name="join_game_button">Join Game</string>
    <string name="active_games_button">Active Games</string>
    <string name="archived_games_button">Archived Games</string>
    <string name="logout_text"><u>Logout</u></string>
    <string name="automatic_login_success">You were successfully logged in!</string>

    <!--Error Messages-->
    <string name="connection_lost_alert">The connection to the server has been lost. Would you like to try again?</string>
    <string name="server_error_alert">We encountered an unexpected error with the server. Would you like to try again?</string>
    <string name="system_error_alert">We encountered an unexpected system error. Would you like to try again?</string>
    <string name="automatic_login_failure">An error occurred and we couldn\'t log you in automatically</string>
    <string name="remember_me_failure">We encountered an error and couldn\'t save your data for next time</string>
    <string name="connection_failed_alert">A connection to the server couldn\'t be established. Please check your connection and try again.</string>

    <!--Dialog Strings-->
    <string name="connecting_dialog_text">Connecting…</string>
    <string name="logging_in_dialog_text">Logging in…</string>
    <string name="loading_dialog_text">Loading…</string>
    <string name="ok_dialog_button">OK</string>

    <!--Active Games Screen-->
    <string name="active_games_title">Your Active Games</string>
    <string name="opponent_label">Opponent: %1$s</string>
    <string name="no_opponent_open">Open - waiting…</string>
    <string name="no_opponent_closed">No Opponent</string>
    <string name="turn_number_label">Turn %1$d</string>
    <string name="user_win">You won!</string>
    <string name="user_lose">You lost!</string>
    <string name="game_drawn">Draw</string>
    <string name="opponent_turn">Opponent\'s turn</string>
    <string name="user_turn">Your turn</string>
    <string name="draw_offered_to_user">Draw offer</string>
    <string name="draw_offered_to_opponent">Draw offer sent</string>
    <string name="games_refresh_failed">Sorry, there was an error and we couldn\'t refresh your games</string>

    <!-- Archived Games Screen-->
    <string name="archived_games_title">Your Archived Games</string>

    <!-- Join Game Screen-->
    <string name="join_games_title">Join a Game</string>
    <string name="enter_gameID_hint">Enter Game ID</string>
    <string name="join_game_button_text">JOIN</string>
    <string name="or">OR</string>
    <string name="open_games_button_text">View open games</string>
    <string name="invalid_gameID_format">Game IDs must be non-empty and cannot contain commas</string>
    <string name="game_does_not_exist_dialog_text">There is no game with that ID in the system!</string>
    <string name="user_already_in_game_dialog_text">You\'ve already joined that game!</string>
    <string name="game_full_dialog_text">That game already has two players!</string>
    <string name="game_joined_text">You successfully joined game %1$s!</string>

    <!-- Open Games Screen-->
    <string name="open_games_title">Open Games</string>
    <string name="open_games_refresh_failed">Sorry, there was an error, and we couldn\'t refresh the list of open games</string>

    <!-- Create Game Screen-->
    <string name="create_game_title">Create a Game</string>
    <string name="open_checkbox_prompt">Allow anyone to join this game</string>
    <string name="create_game_button_text">CREATE</string>
    <string name="gameID_in_use_text">That gameID is already being used!</string>
    <string name="gameID_format_invalid_text">The gameID is invalid. GameIDs can\'t contain commas or spaces, and must be non-empty.</string>

    <!-- Play Game Screen-->
    <string name="move_failed_error_text">Something went wrong and we couldn\'t submit your move. Do you want us to try again?</string>
    <string name="model_failure_error_text">Sorry, something went wrong and we couldn\'t submit your move.</string>
    <string name="load_error_text">Sorry, something went wrong and we couldn\'t load your game.</string>
    <string name="previous_game_button_label">Previous</string>
    <string name="draw_button_label">Draw</string>
    <string name="refresh_button_label">Refresh</string>
    <string name="resign_button_label">Resign</string>
    <string name="next_game_button_label">Next</string>
    <string name="game_no_opponent_text">No opponent</string>
    <string name="game_opponent_label">Opponent: %1$s</string>
    <string name="game_turn_number_label">Turn %1$s</string>
    <string name="user_won_dialog_title">You Won!</string>
    <string name="user_won_opponent_resign_dialog_title">Your opponent resigned!</string>
    <string name="user_lost_dialog_title">You Lost! :(</string>
    <string name="user_lost_resign_dialog_title">You resigned :(</string>
    <string name="draw_dialog_title">Draw</string>
    <string name="user_turn_state_label">Your turn</string>
    <string name="opponent_move_state_label">%1$s\'s turn</string>
    <string name="opponent_turn_draw_offer_state_label">Draw offer sent</string>
    <string name="user_won_state_label">You won!</string>
    <string name="user_lost_state_label">You lost</string>
    <string name="draw_state_label">Draw</string>
    <string name="draw_offer_failed">Oops! Something went wrong and we couldn\'t offer your opponent a draw.</string>
    <string name="draw_acceptance_failed">Oops! Something went wrong and we couldn\'t accept the draw for you.</string>
    <string name="draw_rejection_failed">Oops! Something went wrong and we couldn\'t reject the draw for you.</string>
    <string name="resignation_failed">Oops! Something went wrong and we couldn\'t submit your resignation.</string>
</resources>