<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.login.CreateAccountActivity">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintVertical_bias="0.3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/create_account_input_error"
            android:fontFamily="sans-serif-condensed"
            android:textSize="17sp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_prompt"
            android:id="@+id/create_username"
            app:layout_constraintWidth_percent="0.7"
            android:layout_marginBottom="5dp"
            style="@style/EditTextStyle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_prompt"
            android:id="@+id/create_password"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            style="@style/EditTextStyle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_prompt"
            android:id="@+id/confirm_password"
            android:inputType="textPassword"
            android:layout_marginBottom="5dp"
            style="@style/EditTextStyle"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/create_account_button"
            android:layout_marginTop="7dp"
            app:cardBackgroundColor="@android:color/black"
            app:cardCornerRadius="3dp"
            android:onClick="create">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/create_account_button_constraint">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_account_button_text"
                    android:text="@string/create_account_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:paddingVertical="6dp"
                    android:textColor="@android:color/white"/>
                <ProgressBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/create_account_progress"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:indeterminateTint="@android:color/white"
                    android:paddingVertical="5dp"
                    app:layout_constraintEnd_toStartOf="@id/create_account_button_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>