<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TitleStyle"
        android:text="@string/create_game_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_game_input"/>
    
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/create_game_input"
        style="@style/EditTextStyle"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:hint="@string/enter_gameID_hint"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/open_checkbox_layout"
        app:layout_constraintStart_toStartOf="@id/create_game_input"
        app:layout_constraintTop_toBottomOf="@id/create_game_input"
        app:layout_constraintEnd_toEndOf="@id/create_game_input"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:alpha="0.7"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/open_checkbox"
            android:text="@string/open_checkbox_prompt"
            app:layout_constraintStart_toStartOf="@id/create_game_input"
            app:layout_constraintTop_toBottomOf="@id/create_game_input"
            android:textSize="17sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:paddingVertical="7dp"/>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/open_checkbox_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="10dp"
        android:clickable="true"
        android:focusable="true">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/create_game_button_selector">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="CREATE"
                style="@style/MainActivityButtonText"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>